--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: ModelFit
-Title: What the Package Does (One Line, Title Case)
+Title: ModelFit R Package
 Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Maintainer: Aanya Mohan <aanyam@umich.edu>
+Author: Aanya Mohan
+Description: Assess model fit of a simple linear regression model by calculating 
+    the multiple R-squared value.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    bench
 VignetteBuilder: knitr
 Config/testthat/edition: 3
